[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/SkillPointsPage/GeneralKnowledgeSkill.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI_Elements/circleFilled.png" type="Texture" id=2]
[ext_resource path="res://UI_Elements/circleEmpty.png" type="Texture" id=3]
[ext_resource path="res://UI_Elements/SkillBoxBorderSquareSmall.png" type="Texture" id=4]
[ext_resource path="res://Scripts/SkillPointsPage/SkillPackContainer.gd" type="Script" id=9]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://UI_Elements/SkillBoxBorder.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=24]
font_path = "res://Fonts/Gruppo-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 26
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = SubResource( 24 )

[sub_resource type="DynamicFont" id=19]
size = 20
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=25]
size = 14
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )
margin_left = 8.16445
margin_right = 10.4972
margin_top = 6.9981
margin_bottom = 5.83175
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )
margin_left = 8.16445
margin_right = 10.4972
margin_top = 6.9981
margin_bottom = 5.83175
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )
margin_left = 8.16445
margin_right = 10.4972
margin_top = 6.9981
margin_bottom = 5.83175
modulate_color = Color( 0, 0.207843, 0.00784314, 1 )

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )
margin_left = 8.16445
margin_right = 10.4972
margin_top = 6.9981
margin_bottom = 5.83175
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[sub_resource type="DynamicFont" id=31]
size = 14
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=32]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )
margin_left = 8.16445
margin_right = 10.4972
margin_top = 6.9981
margin_bottom = 5.83175
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxTexture" id=33]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )
margin_left = 8.16445
margin_right = 10.4972
margin_top = 6.9981
margin_bottom = 5.83175
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxEmpty" id=34]

[sub_resource type="StyleBoxTexture" id=35]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )
margin_left = 8.16445
margin_right = 10.4972
margin_top = 6.9981
margin_bottom = 5.83175
modulate_color = Color( 0, 0.207843, 0.00784314, 1 )

[sub_resource type="StyleBoxTexture" id=36]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 50 )
margin_left = 8.16445
margin_right = 10.4972
margin_top = 6.9981
margin_bottom = 5.83175
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[node name="GeneralKnowledgeContainer" type="TextureRect"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_right = 0.244792
anchor_bottom = 0.222222
rect_min_size = Vector2( 470, 200 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PackName" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.0276596
anchor_top = 0.0208333
anchor_right = 0.642553
anchor_bottom = 0.295833
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 12 )
text = "VERY LONG TEXT TO SEE LONG SKILLS"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SpecializationOfPack" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.0382979
anchor_top = 0.316667
anchor_right = 0.968085
anchor_bottom = 0.420833
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "SPEC: TECHNICIAN AND WARRIOR"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="."]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0796169
anchor_top = 0.212
anchor_right = 0.875981
anchor_bottom = 0.292
margin_left = -19.8276
margin_top = 40.0
margin_right = 41.8087
margin_bottom = 40.0

[node name="BuyPackButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.642552
anchor_top = 0.0625001
anchor_right = 0.965956
anchor_bottom = 0.204167
margin_right = -2.00009
margin_bottom = 0.999981
custom_colors/font_color_disabled = Color( 0, 0.466667, 0.0509804, 1 )
custom_colors/font_color_focus = Color( 0, 0.792157, 0.0862745, 1 )
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_colors/font_color_hover = Color( 0, 0.792157, 0.0862745, 1 )
custom_colors/font_color_pressed = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 25 )
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
custom_styles/focus = SubResource( 28 )
custom_styles/disabled = SubResource( 29 )
custom_styles/normal = SubResource( 30 )
text = "buy_pack"
icon = ExtResource( 3 )
icon_align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SellPackButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.642552
anchor_top = 0.0625001
anchor_right = 0.965956
anchor_bottom = 0.208334
margin_right = -2.0
custom_colors/font_color_disabled = Color( 0, 0.466667, 0.0509804, 1 )
custom_colors/font_color_focus = Color( 0, 0.792157, 0.0862745, 1 )
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_colors/font_color_hover = Color( 0, 0.792157, 0.0862745, 1 )
custom_colors/font_color_pressed = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 31 )
custom_styles/hover = SubResource( 32 )
custom_styles/pressed = SubResource( 33 )
custom_styles/focus = SubResource( 34 )
custom_styles/disabled = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
text = "sell_pack"
icon = ExtResource( 2 )
icon_align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SkillObjectGroup" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 0.997871
anchor_bottom = 0.987501
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SkillObject1" parent="SkillObjectGroup" instance=ExtResource( 1 )]
anchor_left = 0.0191489
anchor_top = 0.466667
anchor_right = 0.561701
anchor_bottom = 0.625001
margin_left = 0.0191612
margin_top = 1.39989
margin_right = -4.98083
margin_bottom = -1.60011
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SkillObject2" parent="SkillObjectGroup" instance=ExtResource( 1 )]
anchor_left = 0.0191489
anchor_top = 0.633334
anchor_right = 0.561701
anchor_bottom = 0.791667
margin_left = 0.0191612
margin_top = 1.89984
margin_right = -4.98083
margin_bottom = -1.10016
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SkillObject3" parent="SkillObjectGroup" instance=ExtResource( 1 )]
anchor_left = 0.0191489
anchor_top = 0.795834
anchor_right = 0.561701
anchor_bottom = 0.954167
margin_left = 0.0191612
margin_top = 3.38727
margin_right = -4.98083
margin_bottom = 0.387268
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="BuyPackButton" to="." method="_on_buy_pack_button_pressed"]
[connection signal="pressed" from="SellPackButton" to="." method="_on_sell_pack_button_pressed"]
[connection signal="general_knowledge_skill_selected" from="SkillObjectGroup/SkillObject1" to="." method="_on_general_knowledge_skill_selected"]
[connection signal="mouse_entered_skill_object" from="SkillObjectGroup/SkillObject1" to="." method="_on_mouse_entered_skill_object"]
[connection signal="on_minus_button_pressed" from="SkillObjectGroup/SkillObject1" to="." method="_on_skill_minus_button_pressed"]
[connection signal="on_plus_button_pressed" from="SkillObjectGroup/SkillObject1" to="." method="_on_skill_plus_button_pressed"]
[connection signal="general_knowledge_skill_selected" from="SkillObjectGroup/SkillObject2" to="." method="_on_general_knowledge_skill_selected"]
[connection signal="mouse_entered_skill_object" from="SkillObjectGroup/SkillObject2" to="." method="_on_mouse_entered_skill_object"]
[connection signal="on_minus_button_pressed" from="SkillObjectGroup/SkillObject2" to="." method="_on_skill_minus_button_pressed"]
[connection signal="on_plus_button_pressed" from="SkillObjectGroup/SkillObject2" to="." method="_on_skill_plus_button_pressed"]
[connection signal="general_knowledge_skill_selected" from="SkillObjectGroup/SkillObject3" to="." method="_on_general_knowledge_skill_selected"]
[connection signal="mouse_entered_skill_object" from="SkillObjectGroup/SkillObject3" to="." method="_on_mouse_entered_skill_object"]
[connection signal="on_minus_button_pressed" from="SkillObjectGroup/SkillObject3" to="." method="_on_skill_minus_button_pressed"]
[connection signal="on_plus_button_pressed" from="SkillObjectGroup/SkillObject3" to="." method="_on_skill_plus_button_pressed"]
